--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "new-ficha-1-0"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Widget for bank"
+authors = ["Maksim Boykov <mboykov6@gmail.com>"]
 readme = "README.md"
 packages = [{include = "new_ficha_1"}]
 
